corrige caminhos calendário

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,8 @@
 project:
   type: website
-  output-dir: docs
+  output-dir: docs 
+  resources: 
+    - resources/*
 
 website:
   title: "LAQUIPE"
